# state-est-testbed

./: "Development Status  .gitignore  CMakeLists.txt  CSV + Plots (Python)  README.md  SDD.md  SDD.txt  csv_per_run: true  demo_notebook.ipynb  environment.yml  pyproject.toml  run_all_estimators.sh  setup-hooks.sh  setup.py  };
.githooks/: pre-commit
configs/: example.yaml  test.yaml  test_ekf.yaml  test_kf.yaml  test_pf.yaml  test_ukf.yaml
models/: simple.py
pystate-est/: __init__.py  kalman.py
python/: analysis_maneuver.py  compare_estimators.py  compare_kf_ukf.py
python/models/: simple.py
python/stateest/: __init__.py  kalman.py  test_bindings.py
python_bindings/: CMakeLists.txt  python_bindings.cpp
scripts/: __init__.py  plot_results.py  setup_instance.sh  state_est_utils.py
src/: main.cpp
src/core/: Config.cpp  Config.hpp  Database.cpp  Database.hpp  DynamicsModel.cpp  DynamicsModel.hpp  Estimator.hpp  EstimatorFactory.cpp  EstimatorFactory.hpp  Experiment.cpp  Experiment.hpp  ExtendedKalmanFilter.cpp  ExtendedKalmanFilter.hpp  InteractingMultipleModel.cpp  InteractingMultipleModel.hpp  KalmanFilter.cpp  KalmanFilter.hpp  LinearGaussianModel.cpp  LinearGaussianModel.hpp  LinearMeasurementModel.cpp  LinearMeasurementModel.hpp  MeasurementModel.hpp  MultiHypothesisTracker.cpp  MultiHypothesisTracker.hpp  ParticleFilter.cpp  ParticleFilter.hpp  UnscentedKalmanFilter.cpp  UnscentedKalmanFilter.hpp
state-est-testbed/: CMakeLists.txt  environment.yml
state-est-testbed/src/core/: Config.cpp  Experiment.hpp  LinearGaussianModel.hpp
tests/: test_kalman_bindings.py  test_kalman_filter.cpp
