[build-system]
requires = ["setuptools>=45", "wheel", "pybind11>=2.10"]
build-backend = "setuptools.build_meta"

[project]
name = "stateest"
version = "0.1.0.dev0"
description = "State estimation testbed"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["stateest"]
package-dir = {"" = "python"}
include-package-data = true

[tool.setuptools.package-data]
"stateest" = ["*.so"]
